--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ h2{
 }
 .filledButton > ion-icon{
     font-size: 30px;
+    margin-top: 43px;
+    margin-left: 17px;
+    color: #EC362D;
 }
 .content{
     width: 1070px;
@@ -89,6 +92,7 @@ h2{
     margin-top: 12px;
 }
 .quizz > img{
+    object-fit: cover;
     height:181px;
     width: 340px;
     border-radius: 5px;
@@ -133,6 +137,10 @@ h2{
     }
     h2{
         margin-left: 0px;
+    }
+    .filledButton{
+        display: flex;
+        justify-content: space-between;
     }
     .quizz{
         margin-left: 0px;
