--- a/pagina2/style2.css
+++ b/pagina2/style2.css
@@ -28,7 +28,7 @@ body{
 /*banner*/
 
 .banner{
-    background-image: url(/img/exemple.jpg);
+    background-image: url(img/exemple.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 227px;
