--- a/pagina2/style2.css
+++ b/pagina2/style2.css
@@ -28,13 +28,11 @@ body{
 /*banner*/
 
 .banner{
-    background-image: url(img/exemple.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
     height: 227px;
     display: flex;
     object-fit: cover;
-
+    width: 100vw;
+    background-color: red;
     /*Header quizz question page*/
     color: white;
     align-items: center;
@@ -43,7 +41,22 @@ body{
     font-weight: 400;
     font-size: 39px;
     line-height: 46px;
+    position: relative;
 }
+
+.bannerText{
+    position: absolute;
+    z-index: 2;
+}
+
+.bannerImg{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: 0;
+    filter: brightness(60%);
+}
+
 
 /*questions*/
 
