--- a/style.css
+++ b/style.css
@@ -4,8 +4,15 @@ body{
     font-family: 'Roboto', sans-serif;
     margin-top: 90px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     background-color: #FAFAFA;
+}
+.doom{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 h2{
@@ -27,6 +34,7 @@ h2{
     z-index: 3;
     font-size: 37px;
     font-weight: 700;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .filledButton{
     display: flex;  
@@ -90,6 +98,9 @@ h2{
     margin-left: 8px;
     margin-right: 8px;
     margin-top: 12px;
+}
+.quizz:hover{
+    cursor: pointer;
 }
 .quizz > img{
     object-fit: cover;
