--- a/style2.css
+++ b/style2.css
@@ -1,37 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
-/*body configs*/
-
-body{
-    font-family: 'Roboto', sans-serif;
-    margin-top: 69px;
-    justify-content: center;
-    background-color: #FAFAFA;
-}
-
-.top{
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 69px;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #EC362D;
-    color: #FFFFFF;
-    z-index: 3;
-    font-size: 37px;
-    font-weight: 700;
-}
 
 /*banner*/
 
 .banner{
+    margin-top: -21px;
     height: 227px;
     display: flex;
     object-fit: cover;
-    width: 100vw;
+    width: 100%;
     background-color: red;
     /*Header quizz question page*/
     color: white;
@@ -232,6 +209,11 @@ body{
     align-items: center;
     text-align: center;
     margin-bottom: 85px;
+}
+
+/*to not show something to the user*/
+.none{
+    display: none;
 }
 
 /*Mobile*/
