ajustado primeira página para pegar quizz da api

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ h2{
     margin-left: 8px;
     margin-right: 8px;
     margin-top: 12px;
+    overflow: hidden;
 }
 .quizz:hover{
     cursor: pointer;
