--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
 body{
+    background-color: #FAFAFA;
+}
+
+.page1{
     font-family: 'Roboto', sans-serif;
     margin-top: 90px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #FAFAFA;
 }
-.doom{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
+
 
 h2{
     margin-top: 48px;
@@ -39,6 +38,7 @@ h2{
 .filledButton{
     display: flex;  
 }
+
 .filledButton > ion-icon{
     font-size: 30px;
     margin-top: 43px;
@@ -98,7 +98,6 @@ h2{
     margin-left: 8px;
     margin-right: 8px;
     margin-top: 12px;
-    overflow: hidden;
 }
 .quizz:hover{
     cursor: pointer;
@@ -135,14 +134,27 @@ h2{
 @media (max-width:1100px){
 
     .content{
-        max-width: 340px;
+        max-width: 95vw;
         align-content: center;
     }
     .yourquizz,.generalquizz{
         display: flex;
         flex-direction: column;
-        align-items: center;        
+        align-items: center;  
     }
+
+    .yourquizz{
+        max-width: 100%;
+    }
+
+    .quizz{
+        width: 100%;
+    }
+
+    .quizz > img{
+        width: 100%;  
+    }
+
     .filled, .content{
         display: flex;
         flex-direction: column;
