--- a/style2.css
+++ b/style2.css
@@ -1,15 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
 
+html{
+    -webkit-tap-highlight-color: transparent;
+}
+
+body{
+   background-color: #FAFAFA;
+}
+
 /*banner*/
 
+.page2{
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
 .banner{
-    margin-top: -21px;
+    margin-top: 69px;
     height: 227px;
     display: flex;
     object-fit: cover;
-    width: 100%;
-    background-color: red;
+    width: 100vw;
+
     /*Header quizz question page*/
     color: white;
     align-items: center;
@@ -24,6 +38,7 @@
 .bannerText{
     position: absolute;
     z-index: 2;
+    margin: auto;
 }
 
 .bannerImg{
@@ -34,60 +49,70 @@
     filter: brightness(60%);
 }
 
-
-/*questions*/
+/*all questions zone*/
 
 .questionZone{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   min-width: 320px;
 }
 
+/*question body*/
+
 .questionArea{
-    height: 676px;
-    width: 759px;
+    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
-    margin-top: 45px;
+    width: 50%;
+    height: 60%;
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 }
 
 .questionHeader{
-    width: 688.16px;
-    height: 137.99px;
-    background-color: #434CA0;
-    margin-bottom: 18px;
+   background-color: #434CA0;
+   color: #FFFFFF;
+   font-weight: 700;
+   font-size: 23px;
+   height: 60px;
+   width: 100%;
+   font-size: 1.1vw;
 
-    color: white;
-    font-weight: 700;
-    font-size: 23px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.questionHeader::-webkit-scrollbar{
+    display: none;
+}
+
+.question{
+    padding: 20px;
 }
 
 .questionContainer{
-    display: flex;
+    display: flex; 
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 27px;
+    justify-content: space-between;
+    
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
 }
 
 .questionBody{
-    display: flex;
-    flex-direction: column;
+    width: 48%;
 }
 
 .answer{
-    width: 329px;
-    height: 175px;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
 }
 
 .imgAnswer{
@@ -96,12 +121,15 @@
 }
 
 .answerText{
+    width: 100%;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1vw;
     line-height: 23px;
-    margin-top: 7px;
-    align-items: center;
+    margin-bottom: 6px;
+    
 }
+
+
 
 /*questions selected*/
 
@@ -127,38 +155,47 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 57px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 
-    width: 759px;
-    height: 430px;
+    width: 50%;
+    height: 60%;
 }
 
 .finalquizzHeader{
-    width: 727px;
-    height: 99px;
-    background-color: #EC362D;;
+    background-color: #EC362D;
     margin-bottom: 18px;
-    margin-top: 18px;
-
     color: white;
     font-weight: 700;
-    font-size: 23px;
+    font-size: 1.2vw;
     line-height: 27px;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 50px;
+    width: 100%;
+    overflow: auto;
+}
+
+.finalquizzHeader::-webkit-scrollbar{
+    display: none;
+}
+
+.finaltittlequiz{
+    padding: 20px;
 }
 
 .finalBody{
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
+    gap: 10px;
+    width: 100%; 
 }
 
 .imgfinalquizzArea{
-    width: 364px;
-    height: 273px;
+    width: 150%;
+    height: 100%;
 }
 
 .imgFinalQuizz{
@@ -167,16 +204,11 @@
     object-fit: cover;
 }
 
-.finalquizzTextArea{
-    width: 328px;
-    height: 250px;
-}
-
 .finalquizzText{
     font-weight: 700;
     font-size: 19px;
-    line-height: 25px;
     text-align: start;
+    font-size: 1vw;
 }
 
 /*buttons*/
@@ -184,12 +216,12 @@
 .resetQuizz{
     cursor: pointer;
     background: #EC362D;
-    height: 52px;
-    width: 260.38px;
+    height: 42px;
+    width: 15vw;
     color: #FFF5F4;
     border-radius: 15px;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 1.2vw;
     line-height: 25px;
     margin-bottom: 16px;
 
@@ -203,7 +235,7 @@
     cursor: pointer;
     color: #818181;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 1.2vw;
     line-height: 25px;
     display: flex;
     align-items: center;
@@ -211,23 +243,77 @@
     margin-bottom: 85px;
 }
 
+
+@media (max-width:1100px){
+    .questionArea{
+        width: inherit;
+        height: inherit;
+    }
+
+    .questionHeader{
+        background-color: #ae59d6;
+        height: 60px;
+        width: 100%;
+        font-size: 2.5vw;
+     }
+     
+     .questionContainer{
+         width: 100%;
+     }
+     
+     .questionBody{
+         width: 48%;
+     }
+     
+     .answer{
+         width: 100%;
+         height: 100%;
+     }
+     
+     .answerText{
+         width: 100%;
+         font-size: 2.1vw;
+     }
+     
+     .finalquizzArea{
+         width: inherit;
+         height: inherit;
+         margin-top: 0;
+     }
+     
+     .finalquizzHeader{
+        background-color: green;
+         font-weight: 700;
+         font-size: 2.5vw;
+         height: 50px;
+         width: 100%;
+     }
+     
+     .finalBody{
+         width: 100%; 
+     }
+     
+     .imgfinalquizzArea{
+         width: 150%;
+         height: 100%;
+     }
+     
+     .finalquizzText{
+         font-size: 2.2vw;
+     }
+     
+     .resetQuizz{
+         font-size: 2.4vw;
+         height: 40px;
+         width: 25vw;
+     }
+     
+     .backtoHome{
+         font-size: 2.2vw;
+     }
+}
+
 /*to not show something to the user*/
 .none{
     display: none;
-}
-
-/*Mobile*/
-@media (max-width:1100px){
-    
-    .questionArea{
-        
-    }
-
-    .finalquizzArea{
-
-    }
-
-    .imgfinalquizzArea{
-        
-    }
 }
