--- a/pagina3/styleform3.css
+++ b/pagina3/styleform3.css
@@ -1,11 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
-body{
-    font-family: 'Roboto', sans-serif;
-    margin-top: 90px;
-    display: flex;
-    justify-content: center;
-    background-color: #FAFAFA;
+html{
+    -webkit-tap-highlight-color: transparent;
 }
 
 .top{
@@ -23,6 +19,14 @@ body{
     font-size: 37px;
     font-weight: 700;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.form3{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    background-color: #FAFAFA;
 }
 
 /*Agora, descida os níveis*/
@@ -50,7 +54,7 @@ body{
 
 .inputFormNivelsArea{
     background-color: white;
-    width: 600px;
+    width: 50vw;
     height: 316px;
     display: flex;
     justify-content: center;
@@ -69,7 +73,7 @@ body{
 }
 
 .inputFormNivels{
-    width: 564px;
+    width: 48vw;
     height: 46px;
     border: 1px solid #D1D1D1;
     border-radius: 5px;
@@ -85,7 +89,7 @@ body{
 }
 
 .continueEndButton{
-    width: 353.91px;
+    width: 35vw;
     height: 54px;
     background: #EC362D;
     border-radius: 15px;
@@ -101,7 +105,7 @@ body{
 .formClosedNivels{
     background-color: white;
     margin-top: 24px;
-    width: 601px;
+    width: 50vw;
     height: 74px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     display: flex;
@@ -121,4 +125,24 @@ body{
 .editIcon{
     width: 26px;
     height: 23px;
+}
+
+@media (max-width:1100px){
+
+    .inputFormNivelsArea{
+        width: 95vw;
+    }
+
+    .inputFormNivels{
+        width: 90vw;
+    }
+
+    .formClosedNivels{
+        width: 95vw;
+    }
+
+    .continueEndButton{
+        margin-top: 30px;
+        width: 50vw;
+    }
 }
