--- a/pagina3/styleform4.css
+++ b/pagina3/styleform4.css
@@ -1,11 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 
-body{
-    font-family: 'Roboto', sans-serif;
-    margin-top: 90px;
-    display: flex;
-    justify-content: center;
-    background-color: #FAFAFA;
+html{
+    -webkit-tap-highlight-color: transparent;
 }
 
 .top{
@@ -25,15 +21,25 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.form4{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    background-color: #FAFAFA;
+}
+
 /*Seu quizz está pronto!*/
 
 .endQuizzCreateArea{
-    margin-top: 40px;
+    margin-top: 45px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 40px;
+    object-fit: cover;
+    clip-path: view-box;
 }
 
 .endQuizzCreateTittle{
@@ -53,7 +59,7 @@ body{
 }
 
 .endQuizzImg{
-    width: 500px;
+    width: 40vw;
     height: 266px;
     border-radius: 5px;
     z-index: 0;
@@ -82,8 +88,8 @@ body{
 }
 
 .acessQuizz{
-    width: 353.91px;
-    height: 54px;
+    width: 25vw;
+    height: 44px;
     background: #EC362D;
     border-radius: 15px;
     display: flex;
@@ -93,14 +99,37 @@ body{
     color: #FFF5F4;
     cursor: pointer;
     margin-top: 45px;
+    padding: 5px;
 }
 
 .backtoHome{
-    width: 219.64px;
+    width: 15vw;
     height: 44px;
     line-height: 25px;
     text-align: center;
     margin-top: 9px;
     color: #818181;
     cursor: pointer;
+}
+
+@media (max-width:1100px){
+    
+
+    .endQuizzImg{
+        width: 90vw;
+        height: 200px;
+    }
+
+    .acessQuizz{
+        margin-top: 20px;
+        width: 35vw;
+    }
+
+    .backtoHome{
+        width: 35vw;
+    }
+
+    .endQuizzImgTittle{
+        top: 160px;
+    }
 }
