organizado forma de abrir o quiz e pequena alteração no css

--- a/style2.css
+++ b/style2.css
@@ -97,7 +97,7 @@ body{
     padding: 20px;
 }
 
-.questionContainer{
+[class^='questionContainer'], [class*='questionContainer']{
     display: flex; 
     flex-wrap: wrap;
     justify-content: space-between;
