--- a/style2.css
+++ b/style2.css
@@ -24,14 +24,14 @@ body{
     display: flex;
     object-fit: cover;
     width: 100vw;
-
+    
     /*Header quizz question page*/
     color: white;
     align-items: center;
     justify-content: center;
     text-align: center; 
     font-weight: 400;
-    font-size: 39px;
+    font-size: 3.6vw;
     line-height: 46px;
     position: relative;
 }
@@ -68,7 +68,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 80%;
     height: 60%;
     background-color: rgb(255, 255, 255);
     padding: 20px;
@@ -113,7 +113,7 @@ body{
 
 .answer{
     width: 100%;
-    height: 100%;
+    height: 250px;
 }
 
 .imgAnswer{
@@ -249,8 +249,8 @@ body{
 
 @media (max-width:1100px){
     .questionArea{
-        width: inherit;
-        height: inherit;
+        width: 90%;
+        height: 100%;
     }
 
     .questionHeader{
@@ -270,7 +270,7 @@ body{
      
      .answer{
          width: 100%;
-         height: 100%;
+         height: 200px;
      }
      
      .answerText{
